# gdDecoGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
libraries/geometrize/: CMakeLists.txt
libraries/json-develop/single_include/nlohmann/: json.hpp
src/: .gitmodules  dllmain.cpp  image2gd.cpp  image2gd.hpp  loadingLayer.cpp  loadingLayer.hpp  nodes.cpp  nodes.hpp  sdlayer.cpp  sdlayer.hpp  sdreq.cpp  sdreq.hpp
